; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/localedef/extr_numeric.c_dump_numeric.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/localedef/extr_numeric.c_dump_numeric.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@numeric = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@EOF = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dump_numeric() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* (...) @open_category()
  store i32* %2, i32** %1, align 8
  %3 = icmp eq i32* %2, null
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %27

5:                                                ; preds = %0
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @numeric, i32 0, i32 2), align 4
  %7 = load i32*, i32** %1, align 8
  %8 = call i64 @putl_category(i32 %6, i32* %7)
  %9 = load i64, i64* @EOF, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %23, label %11

11:                                               ; preds = %5
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @numeric, i32 0, i32 1), align 4
  %13 = load i32*, i32** %1, align 8
  %14 = call i64 @putl_category(i32 %12, i32* %13)
  %15 = load i64, i64* @EOF, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %23, label %17

17:                                               ; preds = %11
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @numeric, i32 0, i32 0), align 4
  %19 = load i32*, i32** %1, align 8
  %20 = call i64 @putl_category(i32 %18, i32* %19)
  %21 = load i64, i64* @EOF, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %17, %11, %5
  br label %27

24:                                               ; preds = %17
  %25 = load i32*, i32** %1, align 8
  %26 = call i32 @close_category(i32* %25)
  br label %27

27:                                               ; preds = %24, %23, %4
  ret void
}

declare dso_local i32* @open_category(...) #1

declare dso_local i64 @putl_category(i32, i32*) #1

declare dso_local i32 @close_category(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
